<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fiuady.hadp.homecontrol.AlarmsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_tag"
        android:padding="10dp"
        android:id="@+id/alarm_tag"/>
    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/all_sw"
        android:text="@string/act_all"
        android:layout_below="@id/alarm_tag"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"

        />
    <Switch
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/p_princ_sw"
        android:text="@string/p_principal_tag"
        android:layout_below="@id/all_sw"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        />
    <Switch
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/cochera_sw"
        android:text="@string/cochera_tag"
        android:layout_below="@id/p_princ_sw"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        />
    <Switch
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:id="@+id/vent_sala_sw"
    android:text="@string/ventana_sala_tag"
    android:layout_below="@id/cochera_sw"
    android:layout_centerHorizontal="true"
    android:padding="5dp"
    />
    <Switch
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/vent_hab1_sw"
        android:text="@string/ventana_hab1_tag"
        android:layout_below="@id/vent_sala_sw"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        />
    <Switch
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/vent_hab2_sw"
        android:text="@string/ventana_hab2_tag"
        android:layout_below="@id/vent_hab1_sw"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        />
    <Switch
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/sens_mov_sw"
        android:text="@string/sensor_mov"
        android:layout_below="@id/vent_hab2_sw"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_desact"
        android:text="@string/desact_tag"
        android:layout_below="@+id/sens_mov_sw"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

</RelativeLayout>
