<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fiuady.hadp.homecontrol.Hab2Fragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/luces_tag"
        android:padding="10dp"
        android:id="@+id/luces_hab2_text"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/luces_hab2_text"
        android:id="@+id/luz_hab2_switch"
        android:text="@string/on_off_luces"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/luz_hab2_switch"
        android:id="@+id/color_select2"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_tag"/>

        <View
            android:elevation="20dp"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:background="#000"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_vent_tag"
        android:padding="10dp"
        android:layout_below="@+id/color_select2"
        android:id="@+id/Ventana_hab2_text"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Switch
        android:enabled="false"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Ventana_hab2_text"
        android:id="@+id/ventana2_switch"
        tools:text="Abierta "/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fan_tag"
        android:padding="10dp"
        android:layout_below="@+id/ventana2_switch"
        android:id="@+id/Ventilador_hab2_text"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Ventilador_hab2_text"
        android:id="@+id/ventilador_hab2_switch"
        android:text="@string/on_off_fan"
        android:textAlignment="center"/>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ventilador_hab2_switch"
        android:id="@+id/ventilador_hab2_control"
        android:text="@string/control_auto_tag"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ventilador_hab2_control"
        android:id="@+id/temperatura_control2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textAlignment="center"
            android:text="@string/max_temp"/>

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

        </NumberPicker>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textAlignment="center"
            android:text="@string/min_temp"/>

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/temperatura_control2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actual_temp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="50°C"/>

    </LinearLayout>



</RelativeLayout>